--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           pre-commit run --all-files
 
       - name: Run tests
-        run: python -m pytest --cov stac_fastapi_html --cov-report xml --cov-report term-missing --asyncio-mode=strict
+        run: python -m pytest --cov stac_fastapi.html --cov-report xml --cov-report term-missing --asyncio-mode=strict
 
       - name: Upload Results
         if: ${{ matrix.python-version == env.LATEST_PY_VERSION }}
